fix ws